--- a/public/global.css
+++ b/public/global.css
@@ -65,3 +65,14 @@ button:focus {
 .yellow {
 	color: #F5C446;
 }
+
+.container {
+	width: 77%;
+	height: 90%;
+	box-shadow: 0px 4px 30px 2px rgba(0, 0, 0, 0.25);
+	border-radius: 40px;
+	margin: 0 auto;
+	text-align: center;
+	padding: 64px 0px;
+	overflow: hidden;
+}
