--- a/public/global.css
+++ b/public/global.css
@@ -14,16 +14,8 @@ body {
 }
 
 a {
-	color: rgb(0,100,200);
 	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: underline;
-}
-
-a:visited {
-	color: rgb(0,80,160);
+	color: black;
 }
 
 label {
