--- a/public/global.css
+++ b/public/global.css
@@ -18,6 +18,10 @@ a {
 	color: black;
 }
 
+a:active {
+	background-color: transparent;
+}
+
 label {
 	display: block;
 }
@@ -52,7 +56,7 @@ button:not(:disabled):active {
 }
 
 button:focus {
-	border-color: #666;
+	border-color: transparent;
 }
 
 .yellow {
